[gd_scene load_steps=6 format=3 uid="uid://dgnpsmf3814ko"]

[ext_resource type="Script" path="res://UI/settings.gd" id="1_mnira"]
[ext_resource type="Texture2D" uid="uid://djb5g7rt1dv55" path="res://UI/download.jpg" id="2_mfytc"]

[sub_resource type="SystemFont" id="SystemFont_1dqhv"]
font_names = PackedStringArray("JetBrains Mono")

[sub_resource type="SystemFont" id="SystemFont_0pr23"]
font_names = PackedStringArray("JetBrains Mono")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nr8q5"]
bg_color = Color(0.0862745, 0, 0.470588, 0.67451)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mnira")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mfytc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -223.0
offset_top = 141.0
offset_right = 218.0
offset_bottom = -169.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.58
theme_override_constants/separation = 20
alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Sound Volume"

[node name="HSlider" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/CheckBox"]
layout_mode = 0
offset_left = 29.0
offset_right = 131.0
offset_bottom = 23.0
text = "Mute Sounds"

[node name="Separatior" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Resulotion" type="OptionButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_1dqhv")
item_count = 4
popup/item_0/text = "1920x1080"
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2
popup/item_3/text = "800x600"
popup/item_3/id = 3

[node name="CheckBox2" type="CheckButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Fullscreen"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 149.0
offset_top = 612.0
offset_right = 218.0
offset_bottom = 648.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_0pr23")
theme_override_font_sizes/font_size = 22
theme_override_styles/hover = SubResource("StyleBoxFlat_nr8q5")
text = "Back"
flat = true

[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="item_selected" from="MarginContainer/HBoxContainer/VBoxContainer/Resulotion" to="." method="_on_resulotion_item_selected"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/CheckBox2" to="." method="_on_check_box_2_pressed"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/VBoxContainer/CheckBox2" to="." method="_on_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/VBoxContainer/CheckBox2" to="." method="_on_check_box_2_toggled"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
